--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ flatbuffers==2.0.7
 folium==0.12.1.post1
 fonttools==4.37.1
 gast==0.4.0
-GDAL==3.5.1
+# GDAL==3.5.1
 geopandas==0.10.2
 google-auth==2.11.0
 google-auth-oauthlib==0.4.6
