--- a/requirements.txt
+++ b/requirements.txt
@@ -65,22 +65,22 @@ mapclassify==2.4.3
 Markdown==3.4.1
 MarkupSafe==2.1.1
 matplotlib==3.5.3
-matplotlib-inline==0.1.6
+# matplotlib-inline==0.1.6
 momepy==0.5.3
 munch==2.5.0
 munkres==1.1.4
 nest-asyncio==1.5.5
-networkx==2.6.3
+# networkx==2.6.3
 numpy==1.22.4
 oauthlib==3.2.0
 opencv-python==4.6.0.66
 opt-einsum==3.3.0
-osmnx==1.1.2
+# osmnx==1.1.2
 packaging==21.3
-pandas==1.3.5
+# pandas==1.3.5
 parso==0.8.3
 pickleshare==0.7.5
-Pillow==9.2.0
+# Pillow==9.2.0
 pip==22.2.2
 prompt-toolkit==3.0.30
 protobuf==3.19.5
@@ -94,19 +94,19 @@ pygeos==0.13
 Pygments==2.13.0
 pyOpenSSL==22.0.0
 pyparsing==3.0.9
-pyproj==3.3.1
+# pyproj==3.3.1
 pyrsistent==0.18.1
 PySocks==1.7.1
 python-dateutil==2.8.2
 pytz==2022.2.1
 pyzmq==23.2.1
-rasterio==1.3.2
+# rasterio==1.3.2
 requests==2.28.1
 requests-oauthlib==1.3.1
 rsa==4.9
 Rtree==1.0.0
-scikit-learn==1.1.2
-scipy==1.9.0
+# scikit-learn==1.1.2
+# scipy==1.9.0
 setuptools==65.3.0
 Shapely==1.8.4
 six==1.16.0
