--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 tensorflow-cpu==2.10.0
 tensorflow-estimator==2.10.0
+tensorflow_intel==2.10.0
 tensorflow-io-gcs-filesystem==0.27.0
 termcolor==2.0.1
 typing_extensions==4.3.0
